<resources>
    <string name="app_name">Sankalan</string>
    <string name="sign_in">Sign in</string>
    <string name="not_registered_yet_message">Not registered yet ?</string>
    <string name="string_not_registered_yet_message" />
    <string name="register_here"><u>Register here</u></string>
    <string name="Enter_Email">Email-Id</string>
    <string name="enter_password">Password</string>
    <string name="email_id">Email-ID</string>
    <string name="password">Password</string>
    <string name="view_Password">View Password</string>
    <string name="Remember_me">Remember me</string>
    <string name="forgotPassword"><u>Forgot Password ?</u></string>
    <string name="login">Log In</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="not_verfied_string">Verify Account First.</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered.</string>
    <string name="Success">SuccessFull Login.</string>
    <string name="Failed">Failed Login.</string>

    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_login">Already Registered ?</string>
    <string name="login_here"><u>Login here</u></string>
    <string name="full_name">Full Name</string>
    <string name="Enter_Name">Enter Full Name</string>
    <string name="College_Name">Enter College Name</string>
    <string name="Enter_course">Enter Your Course</string>
    <string name="Enter_Course_year">Year of the Course</string>
    <string name="Enter_Mobile_Num">Enter Mobile Number</string>
    <string name="name">Name</string>
    <string name="CollegeName">College</string>
    <string name="CourseName">Course</string>
    <string name="yoc">Course Year</string>
    <string name="mobile">Mobile</string>
    <string name="pswrdReset">Reset your password</string>
    <string name="confirmEmail">Confirm Email-ID</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="change_password">Reset Password</string>
    <string name="event_name">Event Name</string>
    <string name="member_1">Enter Registered Email of Member 1</string>
    <string name="full_name1">Full Name</string>
    <string name="member_2">Enter Registered Email of Member 2</string>
    <string name="full_name2">Full Name</string>
    <string name="member_3">Enter Registered Email of Member 3</string>
    <string name="full_name3">Full Name</string>
    <string name="member_4">Enter Registered Email of Member 4</string>
    <string name="full_name4">Full Name</string>


    <string name="home">Home</string>
    <string name="about_us">About Us</string>

    <string name="valo_wars">Valo Wars</string>
    <string name="valo_wars_time">Timing</string>
    <string name="non_technical">Non-Technical</string>
    <string name="technical">Technical</string>
    <string name="timing">Timing</string>
    <string name="team">Team</string>
    <string name="venue">Venue</string>
    <string name="event_poster">Event Poster</string>
    <string name="contact_person">Contact Person</string>

    <string name="if_you_want">If you want to edit your details </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">PassWord Must Contains a number a character a capital letter and a Small letter.</string>
    <string name="invalid_mobile">Mobile Number have to be length of 10.</string>
    <string name="invalid_course_year">Invalid Course Year (Can be in between 1 to 4).</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_user">User</string>
    <string name="empty_edtit_text">Required</string>

    <string name="menu_home">Events</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="MyProfile">MY Profile</string>
    <string name="MyEvents">MY Events</string>
    <string name="MyTeam">My Team</string>
    <string name="ScoreBoard">ScoreBoard</string>
    <string name="HelpandFeedBack">Help/FeedBack</string>
    <string name="AboutUs">About Us</string>
    <string name="gallery">Gallery</string>
    <string name="events">Events</string>
    <string name="dept_title">dept title</string>
    <string name="desc">none</string>
    <string name="scroll_description">Selected Event  Details</string>
    <string name="sucess_register">Registered Successfully.</string>
    <string name="sankalan_2022">Sankalan \'23</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="add_member">Add Member</string>
    <string name="remove_member">Remove Member</string>
    <string name="you_can_have_2_or_4_members">You can have 2 or 4 members.</string>

    <string name="aboutSanklan">Sankalan is the annual tech fest of Department of Computer Science, University of Delhi (DUCS).</string>
    <string name="what_is_sanlan">This is the annual tech fest of DUCS which has been our pride for more than a decade now.

Since its inception in 2005, it has been a part and parcel of lives at DUCS. Students from universities across India come and participate enthusiastically in this two day event. This is the time when everyone works together as a team and is dedicated towards a common goal to bring pride and honour to the Department.

The sole reason for this event is to nurture qualities of participants.

We at DUCS put our efforts to make this event fruitful and memorable. \'Division of labour\' is followed here at every step. This keeps the students mentally prepared to perform well in the companies and prepares them to take responsibilities and live up to the expectations.

Renowned people from the IT industry and our alumni placed in various tech giant companies judge and review all the technical events held during the fest. After the two days of long grilling experience, students are awarded and appreciated for winning and participating in the fest.

A large number of sponsors who financially aid this event form the backbone of the fest. Thankful to the sponsors who always believes in us.</string>
    <string name="sponsers">Sponsers</string>
    <string name="meet_developers">Meet Team</string>
    <string name="edit">Edit</string>
    <string name="uploadSucces">SuccessFully Uploaded.</string>
    <string name="deleteSuccess">SuccessFully Deleted.</string>
    <string name="ducs_addres">Department of Computer Science, First Floor, Faculty of Mathematical Sciences, Room No . 113, Opposite Daulat Ram College, University of, Delhi, 110007</string>
    <string name="logout">Logout</string>
    <string name="time_table">Time Table</string>
    <string name="string_time_table">Time Table</string>
    <string name="help_message">For General Queries, Feel Free to Reach us on</string>
    <string name="sankalan_facebook">Sankalan Facebook :</string>
    <string name="sankalan_instagram">Sankalan Instagram:</string>
    <string name="sankalan_email">Sankalan Email:</string>
    <string name="contact_us">Contact Us:</string>
    <string name="ducs_address">DUCS Address:</string>
    <string name="ducs_location">DUCS Location:</string>
    <string name="developer_team">Developer Team</string>
    <string name="panel_team">Panel Team</string>
    <string name="fixed_verification_instruction">Please Bring Your College Id and Government Id For Verification.</string>

    <string-array name="eventType">
        <item>Technical</item>
        <item>NonTechnical</item>
    </string-array>
    <string-array name="team">
        <item>Team</item>
        <item>Individual</item>
    </string-array>

</resources>