<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/myProfileFragment"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/MyProfile"

            />
        <item
            android:id="@+id/myEventsFragment"
            android:icon="@drawable/ic_baseline_event_note_24"
            android:title="@string/MyEvents"

            />

        <item
            android:id="@+id/scoreboardFragment"
            android:icon="@drawable/ic_baseline_score_24"
            android:title="@string/ScoreBoard" />
        <item
            android:id="@+id/helpFragment"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/HelpandFeedBack" />
        <item
            android:id="@+id/sponsersFragment"
            android:icon="@drawable/ic_sponser"
            android:title="@string/sponsers" />
        <item
            android:id="@+id/developerFragment"
            android:icon="@drawable/ic_coding"
            android:title="@string/meet_developers" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/logout" />
    </group>

</menu>