<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false"
    android:layout_margin="8dp"
    android:background="@color/black"
    >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#222222"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/event_poster_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/valo_wars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:id="@+id/event_title_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/valo_wars"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/event_type_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_title_card"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/non_technical"
                android:textColor="#FFFFFF"
                android:visibility="gone"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/event_nos_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_type_card"
                android:layout_marginStart="20dp"
                android:visibility="gone"
                android:drawablePadding="3dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_baseline_group_24" />

            <TextView
                android:id="@+id/event_venue_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="3dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/venue"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:visibility="gone"
                app:drawableLeftCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/event_timing_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="3dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:lineSpacingExtra="3sp"
                android:lines="1"
                android:text="@string/valo_wars_time"
                android:textColor="#28917E"
                android:textSize="14sp"
                android:visibility="gone"
                app:drawableLeftCompat="@drawable/ic_baseline_time_24" />


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>

